70114ee3-7c51-40a6-af98-bd2ca53150ad/5f15fa29-4f40-4c6c-ab4a-50731ab0ebb4/4c74e2ba-15ec-460e-b71c-958747a8f04c/graph-4cd42e04-df35-48c7-828e-f38dad5a8254/kubernates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service-4c74e2ba-15ec-460e-b71c-958747a8f04c
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: rest-app-4c74e2ba-15ec-460e-b71c-958747a8f04c
spec:
  selector:
    app: rest-app-4c74e2ba-15ec-460e-b71c-958747a8f04c
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
